--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -1,3 +1,9 @@
+[".oh-my-zsh"]
+    type = "archive"
+    url = "https://github.com/ohmyzsh/ohmyzsh/archive/master.tar.gz"
+    exact = true
+    stripComponents = 1
+    refreshPeriod = "168h"
 [".vim/pack/bundles/start/syntastic"]
     type = "archive"
     url = "https://github.com/vim-syntastic/syntastic/archive/refs/heads/master.zip"
